Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/patterns/PatternVariablesAreNonFinal.out
PatternVariablesAreNonFinal.java:15:40: compiler.err.cant.ref.non.effectively.final.var: s, (compiler.misc.inner.cls)
1 error
